--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -6,5 +6,20 @@
 </head>
 <body>
     <h1 th:text="'List of Owners'">List of owners...</h1>
+
+    <table>
+        <thead>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </thead>
+        <tbody>
+            <tr th:each="owner : ${owners}">
+                <td th:text="${owner.id}">1</td>
+                <td th:text="${owner.firstName}">Jack</td>
+                <td th:text="${owner.lastName}">Jack</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
