--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,6 +5,7 @@
     <title>List of Pet Owner</title>
 </head>
 <body>
+<!--/*@thymesVar id="owner" type="pl.sokolx.petclinic.model.Owner"*/-->
     <h1 th:text="'List of Owners'">List of owners...</h1>
 
     <table>
@@ -16,8 +17,8 @@
         <tbody>
             <tr th:each="owner : ${owners}">
                 <td th:text="${owner.id}">1</td>
-                <td th:text="${owner.firstName}">Jack</td>
-                <td th:text="${owner.lastName}">Jack</td>
+                <td th:text="${owner.firstName}">Joe</td>
+                <td th:text="${owner.lastName}">Buck</td>
             </tr>
         </tbody>
     </table>
